[package]
name = "acpi"
description = "The Firework ACPI implementation crate"
repository = "https://bitbucket.org/firework-os/acpi"
keywords = ["firework", "acpi", "amd64", "x86_64"]
categories = ["no-std"]
version = "0.1.0"
authors = ["VisualDevelopment"]
edition = "2021"
license-file = "LICENSE"

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"

[dependencies]
modular-bitfield = "0.11.2"
amd64 = { path = "../amd64" }
