[package]
name = "acpi"
description = "The Firework ACPI implementation crate"
repository = "https://github.com/Firework-OS/ACPI"
keywords = ["firework", "acpi", "amd64", "x86_64"]
categories = ["no-std"]
version = "0.1.0"
authors = ["VisualDevelopment"]
edition = "2021"
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
modular-bitfield = "0.11.2"
amd64 = { path = "../AMD64" }
